fixing hero image on IOS

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -822,7 +822,7 @@ section {
   }
   /*HEADER*/
   .header__heading {
-    font-size: 9rem;
+    font-size: 8rem;
   }
   /*MAIN*/
   /*SWIMMERS OF THE MONTH*/
