--- a/static/sass/_small.scss
+++ b/static/sass/_small.scss
@@ -8,7 +8,7 @@
     /*HEADER*/ 
     .header {
         &__heading {
-            font-size: 9rem;
+            font-size: 8rem;
         }
     }
 
